ipc/ipdl/test/ipdl/error/unknownIntrMessage.ipdl
intr protocol unknownIntrMessage {
parent:
    intr Msg();
};
